--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,10 +3,11 @@ NODE_ENV=development
 
 # Database - PostgreSQL
 # Local development:
-DATABASE_URL=postgresql://postgres:2002@localhost:5432/budget_tracker
+DATABASE_URL=postgresql://username:password@localhost:5432/<db-name>
 
 # Production (Neon):
 # DATABASE_URL=postgresql://user:pass@ep-xxx.neon.tech/dbname?sslmode=require
+# Use the credentials of which deployment method you are using 
 
 # JWT Secret (CRITICAL - Generate secure random string)
 # Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
