--- a/.env
+++ b/.env
@@ -2,12 +2,12 @@
 # In a real-world scenario, you should create a .env file and fill in the values.
 
 # PostgreSQL Database settings
-POSTGRES_DB=<your-database-name>
-POSTGRES_USER=<your-database-username>
-POSTGRES_PASSWORD=<your-database-password>
+POSTGRES_DB=<db_name>
+POSTGRES_USER=<db_user>
+POSTGRES_PASSWORD=<db_password>
 
 # Backend JWT Secret
-JWT_SECRET=<your-super-secret-jwt-key>
+JWT_SECRET=your-super-secret-jwt-key
 
 # Frontend URL for backend configuration
-FRONTEND_URL=http://<your-public-ip-address>:3000
+FRONTEND_URL=http://<public-ip-address>:3000
